--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -1,8 +1,41 @@
 @import url(http://fonts.googleapis.com/css?family=Trocchi|Droid+Sans);
 body{
 	background:url(<%= asset_path "bg.png" %>);
-	font-family: Trocchi, georgia;
+	font-family: Droid Sans, helvetica;	
 }
 a{
-font-family: Droid Sans, helvetica	
+	font-family: Droid Sans, helvetica;	
+}
+h1,h2,h3,h4,h5,h6,h7{
+font-family: Trocchi, helvetica;
+color: #f16e38;	
+}
+.navbar-inner {
+min-height: 40px;
+padding-left: 20px;
+padding-right: 20px;
+background-color: transparent;
+background-image: none;
+border: none;
+box-shadow: none;
+}
+.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner {
+box-shadow:none;
+}
+.container{
+	margin-top: 20px;
+}
+.content{
+	margin-top: 20px;
+	background:white;
+	box-shadow: 0px 2px 1px #85a379;
+	border-radius:0px;
+}
+.navbar .nav > li > a {
+float: none;
+padding: 10px 15px 10px;
+color: #2b241e;
+text-decoration: none;
+text-shadow: 0 1px 0 #85a379;
+font-family: Droid Sans, helvetica;	
 }
