--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
-<%= link_to "Radlibs5", root_path, :class => 'brand' %>
-<ul class="nav">
+<%= link_to image_tag( 'logo.png'), 'http://www.google.com', :class => 'brand' %>
+<ul class="nav pull-right">
   <% if user_signed_in? %>
     <li>
     <%= link_to 'Logout', signout_path %>      
