--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -3,15 +3,15 @@
 
   <div class="form-inputs">
 
-    <%= f.input :title %>
+    <%= f.input :title, :input_html => {:class => "span4"} %>
 
-    <%= f.input :template %>
+    <%= f.input :template, :input_html => {:class => "span8"} %>
 
-    <%= f.input :user_id %>
+    <%= f.input :user_id, :as => :hidden, :value => current_user %>
 
   </div>
+<br />
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <%= f.button :submit , :class => "btn-success"%>
+
 <% end %>
