--- a/app/views/radlibs/index.html.erb
+++ b/app/views/radlibs/index.html.erb
@@ -2,16 +2,12 @@
 
 <% @radlibs.each do |radlib| %>
   
-    <%= radlib. template_id %>
-    <%= radlib.user_id %>
+    <%= radlib.template.template %>
     <%= radlib.radlib %>
     <%= link_to 'Show', radlib %>
     <%= link_to 'Edit', edit_radlib_path(radlib) %>
     <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
   </tr>
 <% end %>
-</table>
 
-<br />
 
-<%= link_to 'New radlib', new_radlib_path %>
