--- a/app/views/radlibs/show.html.erb
+++ b/app/views/radlibs/show.html.erb
@@ -10,10 +10,12 @@
   <%= @radlib.user_id %>
 </p>
 
+<% present @radlib, RadlibsPresenter do |presenter| %>
 <p>
   <b>radlib:</b>
-  <%= @radlib.words %>
+  <%= presenter.filled_in_radlib %>
 </p>
+<% end %>
 
 
 <%= link_to 'Edit', edit_radlib_path(@radlib) %> |
