--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -33,9 +33,19 @@ box-shadow:none;
 }
 .navbar .nav > li > a {
 float: none;
-padding: 10px 15px 10px;
+padding: 20px 15px 10px;
 color: #2b241e;
 text-decoration: none;
 text-shadow: 0 1px 0 #85a379;
 font-family: Droid Sans, helvetica;	
+}
+.navbar .brand {
+float: left;
+display: block;
+padding: 0px 20px 10px 0px;
+margin-left: -20px;
+font-size: 20px;
+font-weight: 200;
+color: #555;
+text-shadow: 0 1px 0 white;
 }
