--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to image_tag( 'logo.png'), 'http://www.google.com', :class => 'brand' %>
+<%= link_to image_tag( 'logo.png'), root_path, :class => 'brand' %>
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
