--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
-
+<div class="pull-right">
+| <%= pluralize @template.reputation_for(:votes).to_i, "vote" %>
+<% if current_user && !current_user.voted_for?(@template) %>
+  | <%= link_to "up", vote_template_path(@template, type: "up"), method: "post" %>
+  | <%= link_to "down", vote_template_path(@template, type: "down"), method: "post" %>
+<% end %>
+</div>
 <h4>
   <%= @template. title %>
 </h4>
@@ -7,8 +13,7 @@
 <p>
   <%=simple_format (@template.template) %>
 </p>
-
-
+<br />
 
 <%= link_to 'Edit', edit_template_path(@template) %> |
 <%= link_to 'Back', templates_path %>
