--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,6 +7,7 @@
     <li>
     <%= link_to 'Radlibs', radlibs_path %>      
     </li>
+    
 </ul>
 <%end%>
 <ul class="nav pull-right">
@@ -14,6 +15,7 @@
     <li>
     <%= link_to 'Logout', signout_path %>      
     </li>
+
 </ul>
   <% else %>
     <li>
@@ -25,8 +27,9 @@
     <% if current_user.has_role? :admin %>
     <ul class="nav pull-right">
       <li>
-      <%= link_to 'Admin', users_path %>
+          <%= link_to current_user.name, "#" %>
       </li>
+      <li><%= link_to current_user.reputation_for(:votes).to_i, "#", :class => "rep" %></li>
       </ul>
     <% end %>
   <% end %>
