--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -31,6 +31,7 @@ box-shadow:none;
 	background:white;
 	box-shadow: 0px 2px 1px #85a379;
 	border-radius:0px;
+	min-height: 700px;
 }
 .navbar .nav > li > a {
 float: none;
