added new badge for templates created in the last 24 hours

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -70,3 +70,8 @@ text-shadow: 0 1px 0 white;
 	width:55px;
 	margin-left:10px;
 }
+.itsnew{
+	background:url(<%= asset_path "new.png" %>) no-repeat;
+	width:31px;
+	height: 32px;
+}
