--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -2,6 +2,9 @@
 <hr>
 
 <% @templates.each do |template| %>
+    <%if template.created_at >= Time.now - 24.hours%>
+    <div class="itsnew pull-right"></div>
+    <%end%>
     <h5><%= template. title %></h5>
     <p>
     <%= truncate(template.template, 
