Can now update generic fields inline

--- a/app/views/radlibs/new.html.erb
+++ b/app/views/radlibs/new.html.erb
@@ -1,7 +1,5 @@
 <h1>New Radlib</h1>
 
-<% present @radlib do |presenter| %>
-<%= presenter.editable_radlib %>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back', radlibs_path %>
