--- a/app/views/radlibs/_form.html.erb
+++ b/app/views/radlibs/_form.html.erb
@@ -10,6 +10,7 @@
     <% end %>
 
     <%= f.input :words, as: :hidden %>
+    <%= f.association :template, as: :hidden %>
   </div>
 
   <div class="form-actions">
