Link to fill in radlib from template

--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -11,4 +11,5 @@
 
 
 <%= link_to 'Edit', edit_template_path(@template) %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Back', templates_path %> |
+<%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
