--- a/app/views/radlibs/_form.html.erb
+++ b/app/views/radlibs/_form.html.erb
@@ -13,7 +13,7 @@
     <%= f.association :template, as: :hidden %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<br /><br />
+    <%= f.button :submit, :class => "btn-success" %>
+
 <% end %>
