--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -18,3 +18,7 @@
 <%= link_to 'Edit', edit_template_path(@template) %> |
 <%= link_to 'Back', templates_path %> |
 <%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
+<hr>
+<% @template.radlibs do |radlib|%>
+<%= radlib.user.name %>
+<% end %>
