--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -5,7 +5,7 @@
     <%if template.created_at >= Time.now - 24.hours%>
     <div class="itsnew pull-right"></div>
     <%end%>
-    <h5><%= template. title %></h5>
+    <h5><%= template.title %></h5>
 
     <p>
     <%= truncate(template.template, 
@@ -19,7 +19,7 @@
 
     <div class="pull-right">
     | <%= pluralize template.reputation_for(:votes).to_i, "vote" %>
-    <% if current_user && !current_user.voted_for?(template) %>
+    <% if current_user && current_user.voted_for?(template) %>
       | <%= link_to "up", vote_template_path(template, type: "up"), method: "post" %>
       | <%= link_to "down", vote_template_path(template, type: "down"), method: "post" %>
     <% end %>
