--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div class="pull-right">
 | <%= pluralize @template.reputation_for(:votes).to_i, "vote" %>
-<% if current_user && !current_user.voted_for?(@template) %>
+<% if current_user && current_user.voted_for?(@template) %>
   | <%= link_to "up", vote_template_path(@template, type: "up"), method: "post" %>
   | <%= link_to "down", vote_template_path(@template, type: "down"), method: "post" %>
 <% end %>
@@ -20,5 +20,5 @@
 <%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
 <hr>
 <% @template.radlibs do |radlib|%>
-<%= radlib.user.name %>
+<%= radlib.user %>
 <% end %>
