some formatting changes

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -2,6 +2,7 @@
 body{
 	background:url(<%= asset_path "bg.png" %>);
 	font-family: Droid Sans, helvetica;	
+	font-size: 12px;
 }
 a{
 	font-family: Droid Sans, helvetica;	
