--- a/app/views/radlibs/index.html.erb
+++ b/app/views/radlibs/index.html.erb
@@ -1,13 +1,14 @@
 <h3>Radlibs</h3>
 
 <% @radlibs.each do |radlib| %>
-
+<h6><%= radlib.template.title %></h6>
     <% present radlib do |presenter| %>
     <%= presenter.filled_in_radlib %>
-    <% end %>
+    <% end %><br /><br />
 
-    <%= link_to 'Show', radlib %>
-    <%= link_to 'Edit', edit_radlib_path(radlib) %>
+    <%= link_to 'Show', radlib %> | 
+    <%= link_to 'Edit', edit_radlib_path(radlib) %> | 
+    <%= link_to 'View Template', template_path(radlib.template) %> | 
     <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
   </tr>
 <% end %>
