--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,17 @@
            <div class="row">
             <div class="span12">
               <%= render 'layouts/messages' %>
+              <div class="pull-right">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-text="Text Goes Here" data-dnt="true">Tweet</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+              </div>
               <%= yield %>
             </div>
           </div>
-          <footer>
-          </footer>
-        </div>
+         
+        </div> 
+        <footer class="footerinfo">
+        </footer>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
   </body>
