format and style

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -3,14 +3,19 @@ body{
 	background:url(<%= asset_path "bg.png" %>);
 	font-family: Droid Sans, helvetica;	
 	font-size: 12px;
+	color: #806e5e;
 }
 a{
 	font-family: Droid Sans, helvetica;	
 	color: #6c9aa8;
 }
-h1,h2,h3,h4,h5,h6,h7{
+h1,h2,h3,h4,h5,h7{
 font-family: Trocchi, helvetica;
 color: #f16e38;	
+}
+h6{
+font-family: Trocchi, helvetica;
+color: #2b241e;		
 }
 .navbar-inner {
 min-height: 40px;
@@ -79,7 +84,24 @@ text-shadow: 0 1px 0 white;
 .highlight{
 background: #feebaa;
 padding: 0px 3px;
+border-bottom:1px solid #ab9683;
+}
+.highlight2{
+background: #feebaa;
+padding: 0px 3px;
 }
 .footerinfo{
 	margin-top: 10px;
+}
+.rep2 {
+color: #6C9AA8;
+margin-right: 0px;
+padding: 20px 40px 10px 38px!important;
+text-decoration: none;
+text-shadow: 0 1px 0 #3C3C3C;
+background: url(/assets/rep.png) no-repeat;
+width: 5px;
+margin-left: 0px;
+font: 18px Droid Sans, helvetica;
+text-align: center;
 }
