--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,9 +32,9 @@
     <% if current_user.has_role? :admin %>
     <ul class="nav pull-right">
       <li>
-          <%= link_to current_user.name, "#" %>
+          <%= link_to current_user.name, user_path(current_user) %>
       </li>
-      <li><%= link_to current_user.reputation_for(:votes).to_i, "#", :class => "rep" %></li>
+      <li><%= link_to current_user.reputation_for(:votes).to_i, user_path(current_user), :class => "rep" %></li>
       </ul>
     <% end %>
   <% end %>
