--- a/app/views/radlibs/_form.html.erb
+++ b/app/views/radlibs/_form.html.erb
@@ -14,6 +14,6 @@
   </div>
 
 <br /><br />
-    <%= f.button :submit, :class => "btn-success" %>
+    <%= f.button :submit, :class => "btn-inverse" %>
 
 <% end %>
