--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -94,11 +94,11 @@ padding: 0px 3px;
 	margin-top: 10px;
 }
 .rep2 {
-color: #6C9AA8;
+color: #2b241e;
 margin-right: 0px;
 padding: 20px 40px 10px 38px!important;
 text-decoration: none;
-text-shadow: 0 1px 0 #3C3C3C;
+text-shadow: none;
 background: url(/assets/rep.png) no-repeat;
 width: 5px;
 margin-left: 0px;
