--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Trocchi|Droid+Sans);
 body{
-	background:url(<%= asset_path "bg.png" %>);
+	background:url(<%= asset_path "bg2.png" %>);
 	font-family: Droid Sans, helvetica;	
 	font-size: 12px;
 	color: #806e5e;
@@ -84,7 +84,7 @@ text-shadow: 0 1px 0 white;
 .highlight{
 background: #feebaa;
 padding: 0px 3px;
-border-bottom:1px solid #ab9683;
+border-bottom:1px dashed #ab9683;
 }
 .highlight2{
 background: #feebaa;
