Include to fill in word count in template list

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -15,6 +15,7 @@
     <% present template do |presenter| %>
     <p>
     <%= presenter.truncated_template_sans_markup %>
+    <%= presenter.get_words_count %>
     </p>
     <% end %>
     <br /><br />
