--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -105,3 +105,21 @@ margin-left: 0px;
 font: 18px Droid Sans, helvetica;
 text-align: center;
 }
+.sidebar{
+	background:#efefef;
+	min-height: 650px;
+	border-radius:3px;
+	padding: 2px 10px 10px 15px ;
+	border: 1px #dcdcdc solid;
+}
+.home_main{
+
+}
+.sidebar h6{
+	text-decoration:underline;
+}
+.sidebar hr{
+color: #9c9c9c;
+background-color: #9c9c9c;
+height: 1px;
+}
