added shine to background

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -123,3 +123,10 @@ color: #9c9c9c;
 background-color: #9c9c9c;
 height: 1px;
 }
+#main{
+	background: url(/assets/shine.png) no-repeat;
+	background-position:0px -100px;
+	overflow: visible;
+	margin-top: -100px;
+	padding-top:100px;
+}
