changed a couple of assets

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -76,6 +76,18 @@ text-shadow: 0 1px 0 white;
 	width:55px;
 	margin-left:10px;
 }
+.rep:hover{
+	color: #2b241e!important;
+	font-size:18px;
+	margin-right: 0px;
+	padding: 20px 0px 10px 38px!important;
+	text-decoration: none;
+	text-shadow: 0 1px 0 #85a379;
+	font-family: Droid Sans, helvetica;	
+	background:url(<%= asset_path "rep.png" %>) no-repeat;
+	width:55px;
+	margin-left:10px;
+}
 .itsnew{
 	background:url(<%= asset_path "new.png" %>) no-repeat;
 	width:31px;
