--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,5 +1,13 @@
 <h3>New Template</h3><br />
 
+<p>
+  Enter your story here. To create space for people to fill in words use double
+  brackets, like this: <span class='markup_example'>{{Noun}}</span>. To create a
+  space where the text should be the same each time, just add a number to the
+  end, like this: <span class='markup_example'>{{Name1}}</span>. Please no
+  spaces between the brackets.
+</p>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', templates_path %>
