made navbar static

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -17,6 +17,12 @@ h6{
 font-family: Trocchi, helvetica;
 color: #2b241e;		
 }
+.navbar-static-top {
+position: static;
+width: 100%;
+margin-bottom: -50px;
+margin-top: -30px;
+}
 .navbar-inner {
 min-height: 40px;
 padding-left: 20px;
