--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,4 +61,4 @@
 	<%=link_to s.title, template_path(s) %> | <%= link_to s.reputation_for(:votes).to_i, template_path(s) %><br />
 	<%end%>
 	<hr>
-</div>
+</div><br />
