various style content and formatting changes

--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -21,6 +21,12 @@
 <%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
 <hr>
 <% @template.radlibs.each_with_index do |radlib, n|%>
-<h4><%= n + 1%>.</h4>Response by: <%= radlib.user.name %>
-<div class="pull-right"><%= link_to "Read", radlib_path(radlib), :class => "btn btn-mini" %></div>
+
+<h6 class="pull-left titlehalf"><%= n + 1%>. <%= radlib.user.name %></h6>
+<% present radlib do |presenter| %>
+<div class="pull-right"><%= link_to "Read", radlib_path(radlib) %></div><p>
+  <%= presenter.filled_in_radlib %>
+</p><hr>
+<% end %>
+
 <% end %>
