--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -9,13 +9,21 @@ a{
 	font-family: Droid Sans, helvetica;	
 	color: #6c9aa8;
 }
-h1,h2,h3,h4,h5,h7{
-font-family: Trocchi, helvetica;
+h1,h2,h3,h4,h5{
+margin: 0.5% 0;
+font-family: Trocchi, georgia;
 color: #f16e38;	
 }
 h6{
-font-family: Trocchi, helvetica;
+margin: 0.5% 0;
+font-family: Trocchi, georgia;
 color: #2b241e;		
+}
+h7{
+margin: 0.5% 0;
+font-family: Droid Sans, helvetica;
+color: #2b241e;		
+margin: -30px 0px 10px 0px;
 }
 .navbar-static-top {
 position: static;
@@ -153,4 +161,8 @@ height: 1px;
 	overflow: visible;
 	margin-top: -300px;
 	padding-top:300px;
+}
+.titlehalf{
+	height: 40px;
+	margin-right: 20px;
 }
