--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -11,7 +11,7 @@
     <div class="itsnew pull-right"></div>
     <%end%>
     <h6><%= template.title %></h6>
-
+    <h7>By: <%= template.user.name %></h7><br /><br />
     <% present template do |presenter| %>
     <p>
     <%= presenter.truncated_template_sans_markup %>
