added reputation system to radlibs

--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -84,6 +84,35 @@ font-weight: 200;
 color: #555;
 text-shadow: 0 1px 0 white;
 }
+.navbar .brand:hover {
+opacity: 0;
+float: left;
+display: block;
+padding: 0px 20px 10px 0px;
+margin-left: -20px;
+font-size: 20px;
+font-weight: 200;
+color: #555;
+text-shadow: 0 1px 0 white;
+transition: opacity 0.2s ease-in;
+-moz-transition: opacity 0.2s ease-in; /* Firefox 4 */
+-webkit-transition: opacity 0.2s ease-in; /* Safari and Chrome */
+-o-transition: opacity 0.2s ease-in; /* Opera */
+}
+.navbar .brand2 {
+float: left;
+display: block;
+padding: 0px 20px 10px 0px;
+margin-left: -20px;
+font-size: 20px;
+font-weight: 200;
+color: #555;
+text-shadow: 0 1px 0 white;
+position:relative;
+left: -153px;
+z-index:-1;
+margin-right: -153px;
+}
 .rep{
 	color: white!important;
 	font-size:18px;
@@ -97,16 +126,8 @@ text-shadow: 0 1px 0 white;
 	margin-left:10px;
 }
 .rep:hover{
-	color: #2b241e!important;
-	font-size:18px;
-	margin-right: 0px;
-	padding: 20px 0px 10px 38px!important;
-	text-decoration: none;
-	text-shadow: 0 1px 0 #85a379;
-	font-family: Droid Sans, helvetica;	
-	background:url(<%= asset_path "rep.png" %>) no-repeat;
-	width:55px;
-	margin-left:10px;
+	background:url(<%= asset_path "rep_hover.png" %>) no-repeat;
+	background-position:-8px -8px;
 }
 .itsnew{
 	background:url(<%= asset_path "new.png" %>) no-repeat;
