--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
 
     <div class="pull-right">
     | <%= pluralize template.reputation_for(:votes).to_i, "vote" %>
-    <% if current_user && !current_user.voted_for?(template) %>
+    <% if current_user && !current_user.voted_for_template?(template) %>
       | <%= link_to "up", vote_template_path(template, type: "up"), method: "post" %>
       | <%= link_to "down", vote_template_path(template, type: "down"), method: "post" %>
     <% end %>
@@ -35,6 +35,9 @@
 <hr width="250px">
 
 <% @recentradlibs.each do |radlib| %>
+<%if radlib.created_at >= Time.now - 24.hours%>
+<div class="itsnew pull-right"></div>
+<%end%>
 <h6><%= radlib.template.title %></h6>
     <% present radlib do |presenter| %>
     <%= presenter.filled_in_radlib %>
@@ -44,6 +47,14 @@
     <%= link_to 'Edit', edit_radlib_path(radlib) %> | 
     <%= link_to 'View Template', template_path(radlib.template) %> | 
     <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <div class="pull-right">
+        | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
+        <% if current_user && !current_user.voted_for_radlib?(radlib) %>
+          | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
+          | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
+        <% end %>
+        </div>
+    
   <hr>
 <% end %>
 
