--- a/app/views/radlibs/index.html.erb
+++ b/app/views/radlibs/index.html.erb
@@ -2,6 +2,9 @@
 <h3>Radlibs</h3>
 <hr />
 <% @radlibs.each do |radlib| %>
+<%if radlib.created_at >= Time.now - 24.hours%>
+<div class="itsnew pull-right"></div>
+<%end%>
 <h6><%= radlib.template.title %></h6>
     <% present radlib do |presenter| %>
     <%= presenter.filled_in_radlib %>
@@ -11,7 +14,15 @@
     <%= link_to 'Edit', edit_radlib_path(radlib) %> | 
     <%= link_to 'View Template', template_path(radlib.template) %> | 
     <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
+    
+    <div class="pull-right">
+    | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
+    <% if current_user && !current_user.voted_for_radlib?(radlib) %>
+      | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
+      | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
+    <% end %>
+    </div>
   <hr>
 <% end %>
 
-
+<%= link_to "Back", :back %>
