--- a/app/views/radlibs/show.html.erb
+++ b/app/views/radlibs/show.html.erb
@@ -13,3 +13,10 @@
 
 <%= link_to 'Edit', edit_radlib_path(@radlib) %> |
 <%= link_to 'Back', radlibs_path %>
+<div class="pull-right">
+| <%= pluralize @radlib.reputation_for(:votes).to_i, "vote" %>
+<% if current_user && !current_user.voted_for_radlib?(@radlib) %>
+  | <%= link_to "up", vote_radlib_path(@radlib, type: "up"), method: "post" %>
+  | <%= link_to "down", vote_radlib_path(@radlib, type: "down"), method: "post" %>
+<% end %>
+</div>
