--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,11 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="pull-right">
-| <%= pluralize @template.reputation_for(:votes).to_i, "vote" %>
-<% if current_user && current_user.voted_for?(@template) %>
-  | <%= link_to "up", vote_template_path(@template, type: "up"), method: "post" %>
-  | <%= link_to "down", vote_template_path(@template, type: "down"), method: "post" %>
-<% end %>
-</div>
+
 <h4>
   <%= @template. title %>
 </h4>
@@ -18,15 +12,30 @@
 <br />
 
 <%= link_to 'Back', templates_path %> |
-<%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
+<%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %><div class="pull-right">
+| <%= pluralize @template.reputation_for(:votes).to_i, "vote" %>
+<% if current_user && current_user.voted_for_template?(@template) %>
+  | <%= link_to "up", vote_template_path(@template, type: "up"), method: "post" %>
+  | <%= link_to "down", vote_template_path(@template, type: "down"), method: "post" %>
+<% end %>
+</div>
 <hr>
 <% @template.radlibs.each_with_index do |radlib, n|%>
 
-<h6 class="pull-left titlehalf"><%= n + 1%>. <%= radlib.user.name %></h6>
+<h6 class="pull-left titlehalf"><%= n + 1%>. <%= radlib.user.name %><br /><div class="pull-left"><%= link_to "Read", radlib_path(radlib) %></div></h6>
 <% present radlib do |presenter| %>
-<div class="pull-right"><%= link_to "Read", radlib_path(radlib) %></div><p>
+<p>
   <%= presenter.filled_in_radlib %>
-</p><hr>
+</p>
+<div class="pull-right">
+    | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
+    <% if current_user && !current_user.voted_for_radlib?(radlib) %>
+      | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
+      | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
+    <% end %>
+    </div>
+<br />
+<hr>
 <% end %>
 
 <% end %>
