--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -12,6 +12,6 @@
   </div>
 <br />
 
-    <%= f.button :submit, "Publish Template", :class => "btn-inverse"%>
+    <%= f.button :submit, "Publish Template", :class => "btn-inverse btn-mini"%>
 
 <% end %>
