--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -162,7 +162,7 @@ text-align: center;
 	background:#efefef;
 	min-height: 650px;
 	border-radius:3px;
-	padding: 2px 10px 10px 15px ;
+	padding: 10px 10px 10px 15px ;
 	border: 1px #dcdcdc solid;
 }
 .home_main{
@@ -186,4 +186,8 @@ height: 1px;
 .titlehalf{
 	height: 40px;
 	margin-right: 20px;
+}
+.name_push{
+	margin-top: -40px;
+	opacity: 0.7;
 }
