--- a/app/views/radlibs/_form.html.erb
+++ b/app/views/radlibs/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= simple_form_for(@radlib) do |f| %>
   <%= f.error_notification %>
 
@@ -14,6 +15,6 @@
   </div>
 
 <br /><br />
-    <%= f.button :submit, :class => "btn-inverse" %>
+    <%= f.button :submit, :class => "btn-inverse btn-mini" %>
 
 <% end %>
