authorization changes, homepage, removed destroy and edit buttons

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -21,8 +21,9 @@
     <br /><br />
     <%= pluralize (template.template).scan(/\w+/).size, "word" %> | <% present template do |presenter| %><%= pluralize presenter.get_words_count, "editable" %><%end%><br />
     <%= link_to 'View Template', template %> |
-    <%= link_to 'Fill In!', new_radlib_path(template_id: template) %> |
-    <%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% if user_signed_in?%>
+    <%= link_to 'Fill out!', new_radlib_path(template_id: template) %>
+    <% end %>
 
     <div class="pull-right">
     | <%= pluralize template.reputation_for(:votes).to_i, "vote" %>
