--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,9 +20,11 @@
     <% end %>
     <br /><br />
     <%= pluralize (template.template).scan(/\w+/).size, "word" %> | <% present template do |presenter| %><%= pluralize presenter.get_words_count, "editable" %><%end%><br />
-    <%= link_to 'View Template', template %> |
-    <%= link_to 'Fill In!', new_radlib_path(template_id: template) %> |
-    <%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'View Template', template %> 
+    <% if user_signed_in?%>
+     | <%= link_to 'Fill out!', new_radlib_path(template_id: template) %>
+    <%end%>
+
 
     <div class="pull-right">
     | <%= pluralize template.reputation_for(:votes).to_i, "vote" %>
@@ -46,9 +48,7 @@
     <% end %><br /><br />
 
     <%= link_to 'Show', radlib %> | 
-    <%= link_to 'Edit', edit_radlib_path(radlib) %> | 
-    <%= link_to 'View Template', template_path(radlib.template) %> | 
-    <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'View Template', template_path(radlib.template) %>
     <div class="pull-right">
         | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
         <% if current_user && !current_user.voted_for_radlib?(radlib) %>
@@ -72,6 +72,11 @@
 	<h6>Popular Radlib Templates</h6>
 	<% @toptemplates.each do |s| %>
 	<%=link_to s.title, template_path(s) %> | <%= link_to s.reputation_for(:votes).to_i, template_path(s) %><br />
+	<%end%>
+	<hr>
+	<h6>Popular Radlibs</h6>
+	<% @topradlibs.each do |r| %>
+	<%=link_to r.template.title, radlib_path(r) %> | <%= link_to r.reputation_for(:votes).to_i, radlib_path(r) %><br />
 	<%end%>
 	<hr>
 </div><br />
