--- a/app/views/radlibs/index.html.erb
+++ b/app/views/radlibs/index.html.erb
@@ -11,9 +11,7 @@
     <% end %><br /><br />
 
     <%= link_to 'Show', radlib %> | 
-    <%= link_to 'Edit', edit_radlib_path(radlib) %> | 
-    <%= link_to 'View Template', template_path(radlib.template) %> | 
-    <%= link_to 'Destroy', radlib, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'View Template', template_path(radlib.template) %>
     
     <div class="pull-right">
     | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
