--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,6 +1,10 @@
 <h3>New Template</h3><br />
 <h5>How its done:</h5>
-<p><strong>You write a story and anything you put between {{brackets}} will become a blank input field for the people filling out your radlib.</strong></p><hr> <p>Try to give the user a hint<em> eg. His name was{{name}}....the {{vehicle}} approached {{adverb}}...The cat ate so much {{food_type}} it eventually just {{action}}</em></p><hr width="325px">
+<p><strong>You write a story and anything put between {{brackets}} will become a blank input field for the people filling out your radlib.</strong></p>
+<hr> <strong>Tips:</strong><br />
+<p>Try to give the user a hint<em> eg. His name was{{name}}....the {{vehicle}} approached {{adverb}}...The cat ate so much {{food_type}} it eventually just {{action}}</em></p>
+<p>Make sure you don't put spaces between your {{bracketed_words}} use an _underscore_ instead. </p>
+<hr width="325px">
 <%= render 'form' %>
 
 <%= link_to 'Back', templates_path %>
