--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
               </div>
               <%= yield %>
             </div>
-            
+
           </div>
-         
-        </div> 
+
+        </div>
         <footer class="footerinfo">
         </footer>
       </div> <!--! end of .container -->
@@ -49,6 +49,9 @@
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(t, s);
       })();
+    </script>
+    <script type="text/javascript">
+      new HelloBar( "<span>Like RadLibs?<\/span> <a href='http://railsrumble.com/entries/316-twenty-percent' class='button'>Why not vote for us?<\/a>", {}, 1.0 );
     </script>
   </body>
 </html>
